--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>website</title>
-    <meta name="keywords" content="hfa111's navigation site">
-    <meta name="description" content="hfa111's navigation site">
+    <meta name="keywords" content="navigation site">
+    <meta name="description" content="navigation site">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EXE1PJ8CR2"></script>
     <script>
@@ -17,7 +17,6 @@
       gtag('config', 'G-EXE1PJ8CR2');
     </script>
     
-    <link rel="shortcut icon" href="https://github.com/hfa111.png?size=40">
     
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Arimo:400,700,400italic">
     <link rel="stylesheet" href="https://fastly.jsdelivr.net/gh/x1ah/webstack-assets@master/assets/css/fonts/linecons/css/linecons.css">
@@ -44,15 +43,14 @@
     </script>
     <!-- / FB Open Graph -->
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://hfa111.github.io/website/">
     <meta property="og:title" content="website">
-    <meta property="og:description" content="hfa111's navigation site">
+    <meta property="og:description" content="navigation site">
     <meta property="og:image" content="">
     <meta property="og:site_name" content="website">
     <!-- / Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="website">
-    <meta name="twitter:description" content="hfa111's navigation site">
+    <meta name="twitter:description" content="navigation site">
     <meta name="twitter:image" content="">
 </head>
 
