--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
             <footer class="main-footer sticky footer-type-1">
                 <div class="footer-inner">
                     <!-- Add your copyright text here -->
-                    <div class="footer-text"><strong>© 2021-2021 @hfa111</strong></div>
+                    <div class="footer-text"><strong>© 2021-2021 @111</strong></div>
                     <!-- Go to Top Link, just add rel="go-top" to any link to add this functionality -->
                     <div class="go-up">
                         <a href="#" rel="go-top">
